fix: minor bugs on mobile v.2

--- a/css/strony-io.webflow.css
+++ b/css/strony-io.webflow.css
@@ -3794,6 +3794,10 @@ figcaption {
     font-size: .825rem;
   }
 
+  .nav_brand.w--current {
+    padding-left: 0;
+  }
+
   .hero_content-wrapper {
     grid-column-gap: 2rem;
     grid-row-gap: 2rem;
